@@ -637,8 +637,8 @@ const QVariant::Handler qt_gui_variant_handler = {
 
 struct QMetaTypeGuiHelper
 {
-    QMetaType::Constructor constr;
-    QMetaType::Destructor destr;
+    QMetaType::Creator creator;
+    QMetaType::Deleter deleter;
 #ifndef QT_NO_DATASTREAM
     QMetaType::SaveOperator saveOp;
     QMetaType::LoadOperator loadOp;
@@ -650,16 +650,16 @@ extern Q_CORE_EXPORT const QMetaTypeGuiHelper *qMetaTypeGuiHelper;
 
 #ifdef QT_NO_DATASTREAM
 #  define Q_DECL_METATYPE_HELPER(TYPE) \
-     typedef void *(*QConstruct##TYPE)(const TYPE *); \
-     static const QConstruct##TYPE qConstruct##TYPE = qMetaTypeConstructHelper<TYPE>; \
-     typedef void (*QDestruct##TYPE)(TYPE *); \
-     static const QDestruct##TYPE qDestruct##TYPE = qMetaTypeDeleteHelper<TYPE>;
+     typedef void *(*QCreate##TYPE)(const TYPE *); \
+     static const QCreate##TYPE qCreate##TYPE = qMetaTypeCreateHelper<TYPE>; \
+     typedef void (*QDelete##TYPE)(TYPE *); \
+     static const QDelete##TYPE qDelete##TYPE = qMetaTypeDeleteHelper<TYPE>;
 #else
 #  define Q_DECL_METATYPE_HELPER(TYPE) \
-     typedef void *(*QConstruct##TYPE)(const TYPE *); \
-     static const QConstruct##TYPE qConstruct##TYPE = qMetaTypeConstructHelper<TYPE>; \
-     typedef void (*QDestruct##TYPE)(TYPE *); \
-     static const QDestruct##TYPE qDestruct##TYPE = qMetaTypeDeleteHelper<TYPE>; \
+     typedef void *(*QCreate##TYPE)(const TYPE *); \
+     static const QCreate##TYPE qCreate##TYPE = qMetaTypeCreateHelper<TYPE>; \
+     typedef void (*QDelete##TYPE)(TYPE *); \
+     static const QDelete##TYPE qDelete##TYPE = qMetaTypeDeleteHelper<TYPE>; \
      typedef void (*QSave##TYPE)(QDataStream &, const TYPE *); \
      static const QSave##TYPE qSave##TYPE = qMetaTypeSaveHelper<TYPE>; \
      typedef void (*QLoad##TYPE)(QDataStream &, TYPE *); \
@@ -704,12 +704,12 @@ Q_DECL_METATYPE_HELPER(QQuaternion)
 
 #ifdef QT_NO_DATASTREAM
 #  define Q_IMPL_METATYPE_HELPER(TYPE) \
-     { reinterpret_cast<QMetaType::Constructor>(qConstruct##TYPE), \
-       reinterpret_cast<QMetaType::Destructor>(qDestruct##TYPE) }
+     { reinterpret_cast<QMetaType::Creator>(qCreate##TYPE), \
+       reinterpret_cast<QMetaType::Deleter>(qDelete##TYPE) }
 #else
 #  define Q_IMPL_METATYPE_HELPER(TYPE) \
-     { reinterpret_cast<QMetaType::Constructor>(qConstruct##TYPE), \
-       reinterpret_cast<QMetaType::Destructor>(qDestruct##TYPE), \
+     { reinterpret_cast<QMetaType::Creator>(qCreate##TYPE), \
+       reinterpret_cast<QMetaType::Deleter>(qDelete##TYPE), \
        reinterpret_cast<QMetaType::SaveOperator>(qSave##TYPE), \
        reinterpret_cast<QMetaType::LoadOperator>(qLoad##TYPE) \
      }
